page_created_and_got_response_from_api

--- a/Meal_DB/mealDb.css
+++ b/Meal_DB/mealDb.css
@@ -5,6 +5,17 @@
     text-align: center;
     padding: 20px;
     color: skyblue;
+    margin-bottom: 20px;
+}
+
+label {
+    font-size: 20px;
+    margin-right: 20px;
+}
+
+input {
+    margin-right: 20px;
+    width: 40px;
 }
 
 
